<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IOIO SERVO 360</string>
    <string name="action_about">About</string>
    <string name="hello_world">Hello world!</string>

    <string name="led_0">LED 0 (On Board)</string>
    <string name="toggle_button1">ToggleButton</string>
    
    <string name="set_left">Left</string>
    <string name="set_right">Right</string>
    <string name="set_stop">Stop</string>
    
    
    <string name="about">Mr.Khwanchai Kaewyos\n\n
         
khwanchai@gmail.com\n\n

http://www.unzeen.com\n
http://www.LookHin.com\n\n
     </string>

</resources>
